--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://lh3.googleusercontent.com/gZrH1-a-oDkdGmPVpIQzgMXFzuQ2__gprZVDQ7LNHcQJbMR3Wd_-M_sEQnAIoWQLGwDz5POZu1_HX1xj3wBbooRxZJ-tcor6bjHm8LXm7WAm55DuWu17TOr-qr1iKhTGFHd4mU1lWEwJdKDS4oflZ2TLeT4_lzBGl5zJqJG6PHiSVQS_pWdVF7QKL2o4PZBMAeqZfcMkH0Ob_L4WUI1-xv5KlFzNijPNU6xiol1pv6OFZl5PILdF0I1F5pir3K_7bL7L_6Wx-SAGEcKTQaXMW8RSNTg0ha2M3RwoyiKwAATOKtLmOKItL3jAxJmlTqMAhUBek4SuhXMeGYplWRfD_dE5JM_fBsZO5Q_iJNkJN3mQob-UqVtoOq7t48dkxKPGDRJH_smyeOQ8DOuBLUOh9uaRJkw46beEBZNFh2tjwl6nvHStbnF5R3Cb8maaDoujC1Odg3WRr7F3ZosJQ7uOM6ooEmDhAdRuhIRqPA30Yz1RZuqeBbfRnGG-avO_-grhKySK_0uImuGDYjbdOGCJnmHHIRiGxwiK4E98CXmBISRSFFizyqnUqT71dBaMdbDqWls4NK2YpAiOXgRoQtsnltj4DrVLxRvEp8-N-ymJRD8i52T5122duPuDnEA_ztFA6eP6y7z7rYhIjmjptTsKTnFucPkvnQ=s48-no"
+      type="image/gif"
+      sizes="16x16"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="Rimaz Khan's personal website" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -28,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rimaz Khan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
